# ai_data_analyst

./: .dockerignore  .gitignore  .trivyignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  settings.yaml
output/: report.html
src/agents/: analysis.py  base.py  cleaning.py  data_loader.py  viz.py
src/ai_data_analyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api/: __init__.py  main.py  schemas.py  server.py
src/cli/: main.py
src/core/: __init__.py  state.py  supervisor.py
src/reporting/: generator.py
src/reporting/templates/: report.html
test/: test_analysis.py  test_api.py  test_cleaning.py  test_cli.py  test_config.py  test_data_loader.py  test_integration.py  test_reporting.py  test_state.py  test_supervisor.py  test_viz.py
