[project]
name = "ai_data_analyst"
version = "0.1.0"
description = "Multi-agent AI system for automated data analysis."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "langgraph>=0.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",  # For Excel support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]