[project]
name = "ai_data_analyst"
version = "0.1.0"
description = "Multi-agent AI system for automated data analysis."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "langgraph>=0.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",  # For Excel support
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "typer>=0.9.0",           # EN: For CLI interface / FR: Pour l'interface CLI
    "rich>=13.7.0",            # EN: For rich console output / FR: Pour une sortie console enrichie
     # EN: Phase 5 Reporting Dependencies / FR: Dépendances de rapport Phase 5
    "jinja2>=3.1.2",          # EN: Template engine for HTML reports / FR: Moteur de template pour rapports HTML
    "markdown>=3.5.0",        # EN: Convert insights to rich HTML / FR: Convertir les insights en HTML enrichi
    "fastapi>=0.110.0",        # EN: Modern async API framework / FR: Framework API async moderne
    "uvicorn[standard]>=0.27.0", # EN: ASGI server for FastAPI / FR: Serveur ASGI pour FastAPI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.2.0",
    "types-Markdown>=3.5.0",  # EN: Add type stubs for markdown library / FR: Ajouter les stubs de type pour markdown
    "httpx>=0.27.0",           # EN: Async HTTP client for testing / FR: Client HTTP async pour tests
    "pytest-asyncio>=0.23.0",  # EN: Async test support for pytest / FR: Support async pour pytest
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
asyncio_mode = "auto"